--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
 
-      <div id="container" class="books content">
+      <div id="all-books" class="books content">
         <h2>All Books</h2>
           
       </div>
