--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
       <p>Author:</p>
       <input class="author_input" type="text">
     </div>
-    <button class="save_popup">SAVE</button>
+    <button onclick="edit(this)" class="save_popup">SAVE</button>
   </div>
     <nav>
         <div class="site-title">
